<resources>
    <string name="app_name">NEWS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_search"><i>Country : ua,gb,ru,br,jp,cn,ro,us...</i></string>
    <string name="name_app"><b>NEWS APP</b></string>
    <string name="n"><b>N</b></string>
    <string name="item_head_text">Alyssa Thompson: The teenage phenomenon who could be US soccer\'s next great</string>
    <string name="item_auth_text">edition.cnn.com</string>
    <string name="menu_book">Bookmarks</string>
    <string name="menu_home">Home</string>
    <string name="bookmarks"><b>BOOKMARKS</b></string>
    <string name="detail">detail</string>
    <string name="back">Back</string>
    <string name="cnn"><b>CNN</b></string>
    <string name="world">World</string>
    <string name="news_app"><b>NEWS APP</b></string>
</resources>